small fix for watchlist nav link when users do not have watchlists the watchlist nav does not appear upon login - after adding watchlists and a solid getprofile pull the link appears - still not perfect but serves most but the most extreme edge case - small style changes to icons in table for more visiblity

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -1259,7 +1259,7 @@ tr:nth-child(even) {
   width: 50px; }
 
 .peopleWatched {
-  color: #5b009c; }
+  color: #d100b9; }
 
 .peopleFave {
   color: #009985; }
