--- a/client/src/scss/_people.scss
+++ b/client/src/scss/_people.scss
@@ -51,7 +51,7 @@ tr:nth-child(even) {
 	width: 50px;
 }
 .peopleWatched {
-	color: $primary-button-color;
+	color: $secondary-button-color;
 }
 .peopleFave {
 	color: $auxiliary-button-color;
